# notas

./: CMakeLists.txt  README.md  common.h  course.cpp  course.h  grades.cpp  grades.h  main.cpp  student.cpp  student.h
test/: CMakeLists.txt  build.sh  course_test.cpp  run.sh  student_test.cpp
